# tentacli

./: .env.example  .gitignore  .rusty-hook.toml  Cargo.toml  Config.yml.dist  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: rust-clippy.yml  rust.yml
src/: lib.rs  main.rs  utils.rs
src/client/: mod.rs  opcodes.rs  types.rs
src/client/auth/: check_proof_code.rs  connect_to_realm.rs  get_realmlist.rs  login_challenge.rs  login_proof.rs  mod.rs  opcodes.rs  request_realmlist.rs  set_connected_to_realm.rs
src/client/characters/: get_characters_list.rs  mod.rs  parse_characters.rs  player_login.rs  request_characters.rs  types.rs
src/client/chat/: globals.rs  handle_emote.rs  handle_message.rs  handle_order.rs  log_chat_message.rs  mod.rs  query_unknown_player.rs
src/client/movement/: detect_motion.rs  handle_follow.rs  mod.rs  monster_move.rs  types.rs
src/client/movement/ai/: detection.rs  handle_follow.rs  mod.rs  movement.rs
src/client/movement/parsers/: mod.rs  movement_parser.rs  position_parser.rs  types.rs
src/client/player/: globals.rs  handle_name_query_response.rs  handle_update_data.rs  mod.rs  party_invite.rs  types.rs
src/client/realm/: auth_challenge.rs  join_common_channel.rs  join_lfg_channel.rs  join_trade_channel.rs  mod.rs  parse_motd.rs  ping.rs  ready_for_account_data_times.rs  realm_split.rs  request_characters.rs  set_encryption.rs  set_in_world.rs  types.rs
src/client/spell/: handle_initial_spells.rs  handle_spell_go.rs  mod.rs  types.rs
src/client/trade/: mod.rs  types.rs
src/client/warden/: mod.rs  opcodes.rs  send_data.rs  types.rs
src/config/: mod.rs  types.rs
src/crypto/: decryptor.rs  encryptor.rs  rc4.rs  srp.rs  warden_crypt.rs
src/errors/: config_error.rs  io_error.rs  mod.rs
src/features/: mod.rs
src/features/console/: mod.rs
src/features/ui/: characters_modal.rs  debug_details_panel.rs  debug_panel.rs  info_panel.rs  mod.rs  realm_modal.rs  title.rs  types.rs
src/features/ui/traits/: mod.rs  ui_component.rs
src/ipc/: mod.rs
src/ipc/duplex/: dialog.rs  key_event.rs  message.rs  mod.rs  types.rs
src/ipc/pipe/: dialog.rs  event.rs  flag.rs  key_event.rs  message.rs  mod.rs  types.rs
src/ipc/session/: mod.rs  types.rs
src/ipc/storage/: mod.rs
src/logger/: mod.rs  types.rs
src/macros/: mod.rs  packet.rs  with_opcode.rs
src/macros/packet/src/: lib.rs  types.rs
src/message_pipe/: dialog_sender.rs  message_sender.rs  mod.rs  types.rs
src/network/: mod.rs  stream.rs
src/network/packet/: mod.rs  types.rs
src/network/packet/parsers/: mod.rs  types.rs  update_packet_parser.rs
src/network/session/: mod.rs  types.rs
src/parsers/movement_parser/: mod.rs  types.rs
src/parsers/position_parser/: mod.rs  types.rs
src/parsers/update_block_parser/: mod.rs  types.rs
src/primary/: mod.rs  utils.rs
src/primary/client/: mod.rs  opcodes.rs  types.rs
src/primary/client/auth/: check_proof_code.rs  connect_to_realm.rs  get_realmlist.rs  login_challenge.rs  login_proof.rs  mod.rs  request_realmlist.rs  types.rs  validate_proof.rs
src/primary/client/characters/: get_characters_list.rs  mod.rs  player_login.rs  types.rs
src/primary/client/chat/: globals.rs  log_chat_message.rs  mod.rs  query_unknown_player.rs  types.rs
src/primary/client/movement/: detect_motion.rs  mod.rs  types.rs
src/primary/client/player/: check_character_create_status.rs  get_characters_list.rs  globals.rs  handle_name_query_response.rs  handle_update_data.rs  mod.rs  player_login.rs  traits.rs  types.rs
src/primary/client/realm/: auth_challenge.rs  join_channels.rs  join_common_channel.rs  join_lfg_channel.rs  join_trade_channel.rs  logout.rs  mod.rs  parse_motd.rs  ping.rs  ready_for_account_data_times.rs  realm_split.rs  request_characters.rs  set_in_world.rs  types.rs
src/primary/client/spell/: handle_initial_spells.rs  handle_spell_go.rs  mod.rs  types.rs
src/primary/client/trade/: mod.rs
src/primary/client/warden/: mod.rs  send_data.rs  types.rs
src/primary/config/: mod.rs  types.rs
src/primary/crypto/: decryptor.rs  encryptor.rs  mod.rs  rc4.rs  srp.rs  warden_crypt.rs
src/primary/errors/: character_error.rs  config_error.rs  field_error.rs  mod.rs  realm_error.rs
src/primary/ipc/pipe/: types.rs
src/primary/ipc/session/: mod.rs
src/primary/macros/: mod.rs  opcodes.rs  with_opcode.rs
src/primary/macros/packet/: Cargo.toml
src/primary/macros/packet/src/: lib.rs  types.rs
src/primary/network/: stream.rs
src/primary/parsers/: mod.rs
src/primary/serializers/: array_serializer.rs  mod.rs
src/primary/serializers/formatters/: Cargo.toml
src/primary/shared/: mod.rs
src/primary/traits/: binary_converter.rs  feature.rs  mod.rs  packet_handler.rs  paginator.rs  processor.rs  stream_reader.rs
src/primary/types/: mod.rs
src/serializers/: array_serializer.rs  mod.rs
src/traits/: binary_converter.rs  mod.rs  packet_handler.rs  paginator.rs  processor.rs  ui_component.rs
src/types/: mod.rs  traits.rs
src/types/fields/: mod.rs  packed_guid.rs  terminated_string.rs
src/ui/: characters_modal.rs  debug_details_panel.rs  debug_panel.rs  info_panel.rs  mod.rs  mode_panel.rs  realm_modal.rs  title.rs  types.rs
src/ui/formatters/: json_formatter.rs  mod.rs
(+13 files in other folders)
