[package]
edition = "2021"
name = "idewave-cli"
version = "2.0.0"
authors = ["Sergio Ivanuzzo <sergio.ivanuzzo@gmail.com>"]
description = "Smart wow-client (cli)"
readme = "README.md"
keywords = ["wow", "wowcli", "idewave", "wowclient", "cli", "idewave-cli"]
license-file = "LICENSE"
repository = "https://github.com/idewave/idewave-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
byteorder = "1.4.3"
num-bigint = "0.4.3"
digest = "0.10.3"
regex = "1.5.6"
sha-1 = "0.9.8"
hmac-sha = "0.6.1"
flate2 = "1.0.24"
arc4 = "0.1.0"
yaml-rust = "0.4.5"
tokio = { version = "1", features = ["sync", "net", "io-util", "macros", "time", "rt-multi-thread"] }
bitflags = "1.3.2"
futures = "0.3.21"
tui = { version = "0", features = ["crossterm"] }
crossterm = "0.24.0"
async-trait = "0.1.57"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
dotenv = "0.15.0"
idewave_packet = { path = "src/macros/packet" }

[dev-dependencies]
rusty-hook = "0.11.2"
