[package]
name = "tentacli"
version = "5.0.0"
edition = "2021"
authors = ["Sergio Ivanuzzo <sergio.ivanuzzo@gmail.com>"]
description = "Smart wow-client (cli), you could use it as separate app or integrate into your own project."
readme = "README.md"
keywords = [
    "idewave", "wow-client",
    "idewave-cli", "smart-cli",
    "console-client"
]
license-file = "LICENSE"
repository = "https://github.com/idewave/tentacli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
byteorder = "1.4.3"
num-bigint = "0.4.3"
digest = "0.10.3"
regex = "1.5.6"
sha-1 = "0.9.8"
hmac-sha = "0.6.1"
flate2 = "1.0.24"
arc4 = "0.1.0"
yaml-rust = "0.4.5"
tokio = { version = "1", features = ["sync", "net", "io-util", "macros", "time", "rt-multi-thread"] }
bitflags = "2.4.2"
futures = "0.3.21"
tui = { version = "0", features = ["crossterm"], optional = true }
crossterm = { version = "0.27.0", optional = true }
colored = { version = "2.1.0", optional = true }
async-trait = "0.1.57"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
dotenv = "0.15.0"
thiserror = "1.0"
anyhow = "1.0"
cfg-if = { version = "1.0.0", features = [] }
async-broadcast = "0.6.0"
idewave_packet = "0.1.0"

[dev-dependencies]
rusty-hook = "0.11.2"
tempdir = "0.3.7"

[features]
default = ["ui"]
ui = ["crossterm/default", "tui/crossterm", "crossterm/event-stream"]
console = ["colored"]
