[package]
name = "tentacli"
version = "8.0.6"
edition = "2021"
authors = ["Sergio Ivanuzzo <sergio.ivanuzzo@gmail.com>"]
description = "Smart wow-client (cli), you could use it as separate app or integrate into your own project."
readme = "README.md"
keywords = [
    "idewave", "wow-client",
    "idewave-cli", "smart-cli",
    "console-client"
]
license-file = "LICENSE"
repository = "https://github.com/idewave/tentacli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
arc4 = "0.1.0"
async-broadcast = "0.7.0"
async-trait = "0.1.57"
bitflags = "2.4.2"
byteorder = "1.4.3"
cfg-if = { version = "1.0.0", features = [] }
chrono = "0.4"
colored = { version = "2.1.0", optional = true }
crossterm = { version = "0.27.0", optional = true }
digest = "0.10.3"
dotenv = "0.15.0"
flate2 = "1.0.24"
futures = "0.3.21"
hmac-sha = "0.6.1"
idewave-formatters = "0.1.0"
idewave_packet = { path = "src/primary/macros/packet" }
num-bigint = "0.4.3"
rand = "0.8.5"
regex = "1.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.9.8"
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "net", "io-util", "macros", "time", "rt-multi-thread"] }
#tokio-util = { version = "0.7.10", features = ["io"] }
tui = { version = "0", features = ["crossterm"], optional = true }
yaml-rust = "0.4.5"

[dev-dependencies]
rusty-hook = "0.11.2"
tempdir = "0.3.7"

[features]
default = ["ui"]
ui = ["crossterm/default", "tui/crossterm", "crossterm/event-stream"]
console = ["colored"]
